# logic-analyzer-ai-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: final_demo_mcp.py  inspect_api.py  test_digital_capture.py  test_import.py  test_mcp_client.py
src/: __init__.py  __main__.py  logic_analyzer_mcp.py  mcp_tools.py  mcp_tools_experimental.py  run_mcp_server.py  saleae_manager.py
src/controllers/: __init__.py  logic2_automation_controller.py  saleae_controller.py  saleae_parser_controller.py
tests/: conftest.py  start_capture.py  test_mcp.bat  test_saleae_connection.py  test_saleae_controller.py  test_saleae_parser_controller.py
tests/examples/: logic16_example.py
